--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
+# Backend environment variables
 DATABASE_URL=postgresql://...[Port 6543]
 DIRECT_URL=postgresql://...[Port 5432]
 SUPABASE_URL=https://xxxx.supabase.co
 SUPABASE_ANON_KEY=ey...
+
+# Frontend environment variables
+NEXT_PUBLIC_SUPABASE_URL=https://xxxx.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=ey...
