--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.53.0",
+    "ioredis": "^5.7.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
